name:            aivika-distributed
version:         0.1
synopsis:        Parallel distributed simulation library
description:
    This package extends the Aivika library with facilities for running parallel distributed simulations.
    It uses an optimistic strategy known as the Time Warp method.
    .
category:        Simulation
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2015. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://www.aivikasoft.com/en/products/aivika.html
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC == 7.10.1

library

    exposed-modules: Simulation.Aivika.Distributed
                     Simulation.Aivika.Distributed.Optimistic
                     Simulation.Aivika.Distributed.Optimistic.DIO
                     Simulation.Aivika.Distributed.Optimistic.Generator
                     Simulation.Aivika.Distributed.Optimistic.QueueStrategy
                     Simulation.Aivika.Distributed.Optimistic.Message
                     Simulation.Aivika.Distributed.Optimistic.PriorityQueue
                     Simulation.Aivika.Distributed.Optimistic.Ref.Base
                     Simulation.Aivika.Distributed.Optimistic.TimeServer

    other-modules:   Simulation.Aivika.Distributed.Optimistic.Internal.DIO
                     Simulation.Aivika.Distributed.Optimistic.Internal.Event
                     Simulation.Aivika.Distributed.Optimistic.Internal.InputMessageQueue
                     Simulation.Aivika.Distributed.Optimistic.Internal.IO
                     Simulation.Aivika.Distributed.Optimistic.Internal.Message
                     Simulation.Aivika.Distributed.Optimistic.Internal.OutputMessageQueue
                     Simulation.Aivika.Distributed.Optimistic.Internal.Ref
                     Simulation.Aivika.Distributed.Optimistic.Internal.TimeServer
                     Simulation.Aivika.Distributed.Optimistic.Internal.UndoableLog

    build-depends:   base >= 3 && < 6,
                     mtl >= 2.1.1,
                     random >= 1.0.0.3,
                     bytestring >= 0.10.4.0,
                     binary >= 0.6.4.0,
                     distributed-process >= 0.5.5.1,
                     aivika >= 4.3.1,
                     aivika-transformers >= 4.3.1

    extensions:      MultiParamTypeClasses,
                     FlexibleInstances,
                     FlexibleContexts,
                     TypeFamilies,
                     RankNTypes,
                     ScopedTypeVariables

    ghc-options:     -O2

source-repository head

    type:     git
    location: https://github.com/dsorokin/aivika-distributed
